updated DB settings

--- a/LeoVegas-wallet/src/main/resources/application.properties
+++ b/LeoVegas-wallet/src/main/resources/application.properties
@@ -12,6 +12,10 @@ spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 hibernate.enhancer.enableLazyInitialization = true
 
+#to enable table creation based on the script provided. To disable hibernate default schema creation based on the Entity.
+spring.jpa.hibernate.ddl-auto=none
+# script-based initialization is performed by default only for embedded databases, to always initialize a database using scripts, we'll have to use:
+spring.sql.init.mode=always   
 
 spring.h2.console.enabled=true
 # Custom H2 Console URL
